--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<div class="inner">
 							<h1>Eastside Reading and Language Therapy</h1>
 							<p>Opening in the fall of 2017<br />
-							Provinding care for youth communincation issues with a speciality in dyslexia.</p>
+							Providing care for youth communincation issues with a speciality in dyslexia.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -47,7 +47,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Dyslexia</h2>
-									<p>.</p>
+									<p>Dyslexia is a class of learning disablility which is classified by issues with decoding, spelling and cognition of words. It is a disorder which is nuerobilogical
+									in origin and is a results of a deficit in the phonological component of language. Eastside Reading Langaue therpery engages in a multi-sensory word analysis
+									program reading, spelling, and vocabulary. We empower kids to learn by demystifing language strucure, spelling structure and phonoics.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
