--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Articulation</h2>
-									<p>.</p>
+									<p>As children grow they begin to develop fine moter oral movments required to produce the formation of clear and distint speech sounds. Artiucaltion colunseling is necessary
+									when a child is unable to correctly produce sounds and words at the same level as his peers. Articulation error can be caused by a wide vararity of issues from touge, lip, or
+									jaw movement to untreaded childhood disorders. It is vital to base treamment based on a clinical assement of the invidual child. It is much easier to correct issues during
+								earily intervention rather than after languge patters have solidified.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
