--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Early Intervention</h2>
-									<p>.</p>
+									<h2>Speech and Cognitive Assessment</h2>
+									<p>Reading and speech assements are a complex processed based on the invidual. Assesing, decoding, characterizing and defining a child communication process requires the integration
+									of mutiple streams of information gathered during the assessment process. The result of the assement is a combination of primarily standarized reporting and individual measurements that can be used to
+								to form a corrective action plan. These assments can be used by any accredited Speech Language Pathologist to understand the nature of the indivual disability.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
@@ -128,8 +130,8 @@
 						</div>
 					</section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+				<!-- contact -->
+					<section id="contact" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
