--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<LINK REL="SHORTCUT ICON" HREF="/images/favicon.ico">
 		<title>Eastside Reading and Langauge Therapy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
