--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>First is a comprehansive assement to understand where we are on the spectium of issues. After the assesment has been compelted we detail out a goal-based plan
+								to specificaly highlight the areas that need improvment and provide a timeline of rehabilitation. </p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
