--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#About">Who we are</a></li>
+							<li><a href="#Services">What we do</a></li>
+							<li><a href="#Contact">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -36,23 +36,21 @@
 							<p>Opening in the fall of 2017<br />
 							Providing care for youth communincation issues with a speciality in dyslexia.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#About" class="button scrolly">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
+					<section id="About" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Dyslexia</h2>
-									<p>Dyslexia is a class of learning disablility which is classified by issues with decoding, spelling and cognition of words. It is a disorder which is nuerobilogical
-									in origin and is a results of a deficit in the phonological component of language. Eastside Reading Langaue therpery engages in a multi-sensory word analysis
-									program reading, spelling, and vocabulary. We empower kids to learn by demystifing language strucure, spelling structure and phonoics.</p>
+									<h2>Experiance</h2>
+									<p>10 years supporting </p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#Services" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -61,13 +59,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Articulation</h2>
-									<p>As children grow they begin to develop fine moter oral movments required to produce the formation of clear and distint speech sounds. Artiucaltion colunseling is necessary
-									when a child is unable to correctly produce sounds and words at the same level as his peers. Articulation error can be caused by a wide vararity of issues from touge, lip, or
-									jaw movement to untreaded childhood disorders. It is vital to base treamment based on a clinical assement of the invidual child. It is much easier to correct issues during
-								earily intervention rather than after languge patters have solidified.</p>
+									<h2>Caring Partnership</h2>
+									<p>Each child is different and needs to be treated as such.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#Services" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -76,12 +71,10 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Speech and Cognitive Assessment</h2>
-									<p>Reading and speech assements are a complex processed based on the invidual. Assesing, decoding, characterizing and defining a child communication process requires the integration
-									of mutiple streams of information gathered during the assessment process. The result of the assement is a combination of primarily standarized reporting and individual measurements that can be used to
-								to form a corrective action plan. These assments can be used by any accredited Speech Language Pathologist to understand the nature of the indivual disability.</p>
+									<h2>Evenidence and Goal based results</h2>
+									<p>We have a plan!</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#Services" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -89,53 +82,52 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<section id="Services" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
 							<p>First is a comprehansive assement to understand where we are on the spectium of issues. After the assesment has been compelted we detail out a goal-based plan
 								to specificaly highlight the areas that need improvment and provide a timeline of rehabilitation. </p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
-									<h3>Dys</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon major fa-book"></span>
+									<h3>Dyslexia</h3>
+									<p>Dyslexia is a class of learning disablility which is classified by issues with decoding, spelling and cognition of words. It is a disorder which is nuerobilogical
+									in origin and is a results of a deficit in the phonological component of language. Eastside Reading Langaue therpery engages in a multi-sensory word analysis
+									program reading, spelling, and vocabulary. We empower kids to learn by demystifing language strucure, spelling structure and phonoics.</p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon major fa-wechat"></span>
+									<h3>Articulation</h3>
+									<p>As children grow they begin to develop fine moter oral movments required to produce the formation of clear and distint speech sounds. Artiucaltion colunseling is necessary
+									when a child is unable to correctly produce sounds and words at the same level as his peers. Articulation error can be caused by a wide vararity of issues from touge, lip, or
+									jaw movement to untreaded childhood disorders. It is vital to base treamment based on a clinical assement of the invidual child. It is much easier to correct issues during
+								earily intervention rather than after languge patters have solidified.</p>
+								</section>
+								<section>
+									<span class="icon major fa-connectdevelop"></span>
+									<h3>Speech and Cognitive Assessment</h3>
+									<p>Reading and speech assements are a complex processed based on the invidual. Assesing, decoding, characterizing and defining a child communication process requires the integration
+									of mutiple streams of information gathered during the assessment process. The result of the assement is a combination of primarily standarized reporting and individual measurements that can be used to
+								to form a corrective action plan. These assments can be used by any accredited Speech Language Pathologist to understand the nature of the indivual disability.</p>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Literacy and Linguistics</h3>
+									<p>Common and quirky words have been a part of English for so long that they no longer fit modern letter-sound correspondence. To learn how to read and spell these old, but useful words,
+									we will use research based strategies to burn them into our mind’s eye, and understand how they impact grammar. Creating and using a Vowel Key to track all 18 English vowel sounds using multi-sensory techniques.
+									Learning how to make non-phonetic words burn into the mind’s eye using the best research based strategies – color coding and mental imagery.</p>
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
+								<li><a href="#contact" class="button">Contact Us</a></li>
 							</ul>
 						</div>
 					</section>
 
 				<!-- contact -->
-					<section id="contact" class="wrapper style1 fade-up">
+					<section id="Contact" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
+							<h2>Request and Appointmnet or Ask a Question</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
