--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Experiance</h2>
-									<p>10 years supporting </p>
+									<h2>About Leslie Crossan M.A., M.S., CCC-SLP</h2>
+									<h3>Masters Degree: Speech Language Pathology Saint Xavier University </h3>
+									<h3>Masters Degree: Linguistics Northeastern Illinois University</h3>
+									<p>Ten years of support with a focus on the pediatric population. I encourage my clients to find their voice and actively participate in their social world. I love what I do and am grateful to have the opportunity to make language more accessible to my clients.
+										I have chosen to focus primary on dyslexia so I can make a greater impact on the children who need my services. Communication is the foundation of a fulfilling, connected life. I try to intergrate concepts related to social thinking, executive functioning, and emotion sharing into each session </p>
 									<ul class="actions">
 										<li><a href="#Services" class="button">Learn more</a></li>
 									</ul>
@@ -59,8 +62,9 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Caring Partnership</h2>
-									<p>Each child is different and needs to be treated as such.</p>
+									<h2>Evenidence and Goal based results</h2>
+									<p>As every child is different it's important to have solution-focused therapy rather than problem-solving. Clients are heavily involved when the goals are outlined and the progress is tracked as well as observed. Focus is on instilling the tools and resources patients
+										need to self-solve future problems. Emphasis is placed on what is changeable and possible.</p>
 									<ul class="actions">
 										<li><a href="#Services" class="button">Learn more</a></li>
 									</ul>
@@ -71,8 +75,11 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Evenidence and Goal based results</h2>
-									<p>We have a plan!</p>
+									<h2>Indviual Care</h2>
+									<p>As every child is different it's important to have solution-focused therapy rather than problem-solving. Clients are heavily involved when the goals are outlined and the progress is tracked as well as observed.  It's paramont to determine what type of learner an individual is
+										(visual, auditory, tactile, or kinesthetic) as it is key to a successful intervention program. Complications with working memory, auditory memory, visual memory, concentration, and organization can influence how an individual learns to read and write. If there is a breakdown
+										anywhere in the system, then communication disabilities can arise. The focus of treatment is on instilling the tools and resources needed to self-solve future problems.
+									</p>
 									<ul class="actions">
 										<li><a href="#Services" class="button">Learn more</a></li>
 									</ul>
@@ -127,7 +134,7 @@
 				<!-- contact -->
 					<section id="Contact" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Request and Appointmnet or Ask a Question</h2>
+							<h2>Request an Appointmnet or Ask a Question</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
@@ -153,7 +160,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
+											<span>()46 )4<br />
 											Nashville, TN 00000-0000<br />
 											USA</span>
 										</li>
