--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 								<div class="inner">
 									<h2>Evenidence and Goal based results</h2>
 									<p>As every child is different it's important to have solution-focused therapy rather than problem-solving. Clients are heavily involved when the goals are outlined and the progress is tracked as well as observed. Focus is on instilling the tools and resources patients
-										need to self-solve future problems. Emphasis is placed on what is changeable and possible.</p>
+										need to self-solve future problems. Emphasis is placed on what is changeable and possible, but the focus of treatment is on instilling the tools and resources needed to self-solve future problems.
+									</p></p>
 									<ul class="actions">
 										<li><a href="#Services" class="button">Learn more</a></li>
 									</ul>
@@ -78,8 +79,7 @@
 									<h2>Indviual Care</h2>
 									<p>As every child is different it's important to have solution-focused therapy rather than problem-solving. Clients are heavily involved when the goals are outlined and the progress is tracked as well as observed.  It's paramont to determine what type of learner an individual is
 										(visual, auditory, tactile, or kinesthetic) as it is key to a successful intervention program. Complications with working memory, auditory memory, visual memory, concentration, and organization can influence how an individual learns to read and write. If there is a breakdown
-										anywhere in the system, then communication disabilities can arise. The focus of treatment is on instilling the tools and resources needed to self-solve future problems.
-									</p>
+										anywhere in the system, then communication disabilities can arise.
 									<ul class="actions">
 										<li><a href="#Services" class="button">Learn more</a></li>
 									</ul>
