minor change today

--- a/index.html
+++ b/index.html
@@ -44,17 +44,14 @@
 				<!-- One -->
 					<section id="About" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/Leslie.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>About Leslie Crossan M.A., M.S., CCC-SLP</h2>
 									<h3>Masters Degree: Speech Language Pathology Saint Xavier University </h3>
 									<h3>Masters Degree: Linguistics Northeastern Illinois University</h3>
 									<p>Ten years of support with a focus on the pediatric population. I encourage my clients to find their voice and actively participate in their social world. I love what I do and am grateful to have the opportunity to make language more accessible to my clients.
-										I have chosen to focus primary on dyslexia so I can make a greater impact on the children who need my services. Communication is the foundation of a fulfilling, connected life. I try to intergrate concepts related to social thinking, executive functioning, and emotion sharing into each session </p>
-									<ul class="actions">
-										<li><a href="#Services" class="button">Learn more</a></li>
-									</ul>
+										I have chosen to focus primary on dyslexia so I can make a greater impact on the children who need my services. As communication is the foundation of a fulfilling, connected life, I try to intergrate concepts related to social thinking, executive functioning, and emotion sharing into each session </p>
 								</div>
 							</div>
 						</section>
@@ -77,9 +74,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Indviual Care</h2>
-									<p>As every child is different it's important to have solution-focused therapy rather than problem-solving. Clients are heavily involved when the goals are outlined and the progress is tracked as well as observed.  It's paramont to determine what type of learner an individual is
-										(visual, auditory, tactile, or kinesthetic) as it is key to a successful intervention program. Complications with working memory, auditory memory, visual memory, concentration, and organization can influence how an individual learns to read and write. If there is a breakdown
-										anywhere in the system, then communication disabilities can arise.
+									<p>As every child is different it's important to have solution-focused therapy rather than problem-solving. Clients are heavily involved when the goals are outlined and the progress progress of the goads is tracked as well as observed. This allow the goal feedback loop to be shared between everyone involved.
+										It's paramont to determine what type of learner an individual is (visual, auditory, tactile, or kinesthetic) as it is key to a successful intervention program. Complications with working memory, auditory memory, visual memory, concentration, and organization can influence how an individual learns to read and write.
+										If there is a breakdown anywhere in the system, then communication disabilities can arise.
 									<ul class="actions">
 										<li><a href="#Services" class="button">Learn more</a></li>
 									</ul>
