--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<section>
 									<span class="icon major fa-cog"></span>
 									<h3>Literacy and Linguistics</h3>
-									<p>Common and quirky words have been a part of English for so long that they no longer fit modern letter-sound correspondence. To learn how to read and spell these old, but useful words,
+									<p>Common and quirky words, love you honey, have been a part of English for so long that they no longer fit modern letter-sound correspondence. To learn how to read and spell these old, but useful words,
 									we will use research based strategies to burn them into our mind’s eye, and understand how they impact grammar. Creating and using a Vowel Key to track all 18 English vowel sounds using multi-sensory techniques.
 									Learning how to make non-phonetic words burn into the mind’s eye using the best research based strategies – color coding and mental imagery.</p>
 								</section>
