--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<div class="inner">
 							<h1>Eastside Reading and Language Therapy</h1>
 							<p>Opening in the fall of 2017<br />
-							Providing care for youth communincation issues with a speciality in dyslexia.</p>
+							Specializing in the evaluation and treatment of developmental dyslexia and language-based reading problems.</p>
 							<ul class="actions">
 								<li><a href="#About" class="button scrolly">Learn more</a></li>
 							</ul>
