Deleted services information

--- a/index.html
+++ b/index.html
@@ -61,37 +61,21 @@
 					<section id="Services" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
-							<p>First is a comprehansive assement to understand where we are on the spectium of issues. After the assesment has been compelted we detail out a goal-based plan
-								to specificaly highlight the areas that need improvment and provide a timeline of rehabilitation. </p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-book"></span>
-									<h3>Dyslexia</h3>
+									<h3>Assessment</h3>
 									<p>Dyslexia is a class of learning disablility which is classified by issues with decoding, spelling and cognition of words. It is a disorder which is nuerobilogical
 									in origin and is a results of a deficit in the phonological component of language. Eastside Reading Langaue therpery engages in a multi-sensory word analysis
 									program reading, spelling, and vocabulary. We empower kids to learn by demystifing language strucure, spelling structure and phonoics.</p>
 								</section>
 								<section>
 									<span class="icon major fa-wechat"></span>
-									<h3>Articulation</h3>
+									<h3>Therapy</h3>
 									<p>As children grow they begin to develop fine moter oral movments required to produce the formation of clear and distint speech sounds. Artiucaltion colunseling is necessary
 									when a child is unable to correctly produce sounds and words at the same level as his peers. Articulation error can be caused by a wide vararity of issues from touge, lip, or
 									jaw movement to untreaded childhood disorders. It is vital to base treamment based on a clinical assement of the invidual child. It is much easier to correct issues during
 								earily intervention rather than after languge patters have solidified.</p>
-								</section>
-								<section>
-									<span class="icon major fa-connectdevelop"></span>
-									<h3>Speech and Cognitive Assessment</h3>
-									<p>Reading and speech assements are a complex processed based on the invidual. Assesing, decoding, characterizing and defining a child communication process requires the integration
-									of mutiple streams of information gathered during the assessment process. The result of the assement is a combination of primarily standarized reporting and individual measurements that can be used to
-								to form a corrective action plan. These assments can be used by any accredited Speech Language Pathologist to understand the nature of the indivual disability.</p>
-								</section>
-								<section>
-									<span class="icon major fa-cog"></span>
-									<h3>Literacy and Linguistics</h3>
-									<p>Common and quirky words, love you honey, have been a part of English for so long that they no longer fit modern letter-sound correspondence. To learn how to read and spell these old, but useful words,
-									we will use research based strategies to burn them into our mind’s eye, and understand how they impact grammar. Creating and using a Vowel Key to track all 18 English vowel sounds using multi-sensory techniques.
-									Learning how to make non-phonetic words burn into the mind’s eye using the best research based strategies – color coding and mental imagery.</p>
 								</section>
 							</div>
 							<ul class="actions">
