--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 							<li><a href="#About">Who we are</a></li>
 							<li><a href="#Services">What we do</a></li>
 							<li><a href="#Contact">Get in touch</a></li>
+							<li><a href="#forms">Download Forms</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -137,6 +138,15 @@
 										</li>
 									</ul>
 								</section>
+								<section id="forms" class="wrapper style1 fullscreen fade-up">
+									<div class="inner">
+										<h1>Available on-line forms</h1>
+										<p>Download here<br />
+										<ul class="actions">
+											<li><a href="#forms" class="button scrolly">Learn more</a></li>
+										</ul>
+									</div>
+								</section>								
 							</div>
 						</div>
 					</section>
