--- a/index.html
+++ b/index.html
@@ -92,18 +92,60 @@
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<?php
+									// define variables and set to empty values
+									$nameErr = $emailErr = "";
+									$name = $email = $gender = $comment = $website = "";
+
+									if ($_SERVER["REQUEST_METHOD"] == "POST") {
+									  if (empty($_POST["name"])) {
+									    $nameErr = "Name is required";
+									  } else {
+									    $name = test_input($_POST["name"]);
+									    // check if name only contains letters and whitespace
+									    if (!preg_match("/^[a-zA-Z ]*$/",$name)) {
+									      $nameErr = "Only letters and white space allowed";
+									    }
+									  }
+
+									  if (empty($_POST["email"])) {
+									    $emailErr = "Email is required";
+									  } else {
+									    $email = test_input($_POST["email"]);
+									    // check if e-mail address is well-formed
+									    if (!filter_var($email, FILTER_VALIDATE_EMAIL)) {
+									      $emailErr = "Invalid email format";
+									    }
+									  }
+
+									  if (empty($_POST["message"])) {
+									    $message = "";
+									  } else {
+									    $message = test_input($_POST["message"]);
+									  }
+									}
+
+										function test_input($data) {
+  										$data = trim($data);
+  										$data = stripslashes($data);
+  										$data = htmlspecialchars($data);
+  										return $data;
+										}
+										?>
+									<form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
 										<div class="field half first">
 											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
+											<input type="text" name="name" id="name" value="<?php echo $name;?>"/>
+											<span class="error">* <?php echo $nameErr;?></span>
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="text" name="email" id="email" value="<?php echo $email;?>"/>
+											<span class="error">* <?php echo $emailErr;?></span>
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="5"></textarea>
+											<textarea name="message" id="message" rows="5" value="<?php echo $message;?>" ></textarea>
 										</div>
 										<ul class="actions">
 											<li><a href="" class="button submit">Send Message</a></li>
@@ -138,7 +180,7 @@
 										</li>
 									</ul>
 								</section>
-								
+
 							</div>
 						</div>
 					</section>
@@ -150,7 +192,7 @@
 											<li><a href="#forms" class="button scrolly">Learn more</a></li>
 										</ul>
 									</div>
-								</section>				
+								</section>
 
 			</div>
 
