--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   										return $data;
 										}
 										?>
-										<form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
+										<form method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']);?>">
 										<div class="field half first">
 											<label for="name">Name</label>
 											<input type="text" name="name" id="name" value="<?php echo $name;?>"/>
