--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
 										<form method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']);?>">
 										<div class="field half first">
 											<label for="name">Name</label>
-											<input type="text" name="name" id="name" value=<?php echo $name;?>/>
+											<input type="text" name="name" id="name" value='<?php echo $name;?>'/>
 											<span class="error">* <?php echo $nameErr;?></span>
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" value=<?php echo $email;?>/>
+											<input type="text" name="email" id="email" value='<?php echo $email;?>' />
 											<span class="error">* <?php echo $emailErr;?></span>
 										</div>
 										<div class="field">
