--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 									<h2>About Leslie Crossan M.A., M.S., CCC-SLP</h2>
 									<h3>Masters Degree: Speech Language Pathology Saint Xavier University </h3>
 									<h3>Masters Degree: Linguistics Northeastern Illinois University</h3>
-									<p>Ten years of support with a focus on the pediatric population. I encourage my clients to find their voice and actively participate in their social world. I love what I do and am grateful to have the opportunity to make language more accessible to my clients.
-										I have chosen to focus primary on dyslexia so I can make a greater impact on the children who need my services. As communication is the foundation of a fulfilling, connected life, I try to intergrate concepts related to social thinking, executive functioning, and emotion sharing into each session </p>
+									<p>Leslie Crossan is a licensed and certified speech-language pathologist who has been practicing since 2010.  After working in a private clinic for seven years treating children and adults with a variety of communication needs, Leslie opened her own practice to focus solely on treating and assessing children with dyslexia and other language-based reading disorders.
+										 </p>
 								</div>
 							</div>
 						</section>
