--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Leslie Crossan M.A., M.S., CCC-SLP</h2>
-									<h3>Bachelors Degree: University of Illinois Urbana-Champaign </h3>
-									<h3>Masters Degree In Linguistics: Northeastern Illinois University</h3>
-									<h3>Masters Degree In Speech-Language Pathology: Saint Xavier University</h3>
+									<h3>Bachelors Degree in History: University of Illinois Urbana-Champaign </h3>
+									<h3>Masters Degree in Linguistics: Northeastern Illinois University</h3>
+									<h3>Masters Degree in Speech-Language Pathology: Saint Xavier University</h3>
 									<p>Leslie Crossan is a licensed and certified speech-language pathologist who has been practicing since 2010.  After working in a private clinic treating children and adults with a variety of communication needs, Leslie opened her own practice to focus solely on providing specialized treatment and assessment for children with language-based reading disorders.
 										 </p>
 								</div>
