--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<div class="inner">
 							<h1>Eastside Reading and Language Therapy</h1>
 							<p>Opening in the fall of 2017<br />
-							Evaluating and treating dyslexia and other language-based reading problems</p>
+							Evaluating and treating dyslexia and other language-based reading difficulties</p>
 							<ul class="actions">
 								<li><a href="#About" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -67,17 +67,14 @@
 								<section>
 									<span class="icon major fa-book"></span>
 									<h3>Assessment</h3>
-									<p>Dyslexia is a class of learning disablility which is classified by issues with decoding, spelling and cognition of words. It is a disorder which is nuerobilogical
+									<p>Dyslexia is a class of learning disablility which is classified by issues with decoding, spelling and cognition of words. It is a disorder which is nuerobiological
 									in origin and is a results of a deficit in the phonological component of language. Eastside Reading Langaue therpery engages in a multi-sensory word analysis
 									program reading, spelling, and vocabulary. We empower kids to learn by demystifing language strucure, spelling structure and phonoics.</p>
 								</section>
 								<section>
 									<span class="icon major fa-wechat"></span>
 									<h3>Therapy</h3>
-									<p>As children grow they begin to develop fine moter oral movments required to produce the formation of clear and distint speech sounds. Artiucaltion colunseling is necessary
-									when a child is unable to correctly produce sounds and words at the same level as his peers. Articulation error can be caused by a wide vararity of issues from touge, lip, or
-									jaw movement to untreaded childhood disorders. It is vital to base treamment based on a clinical assement of the invidual child. It is much easier to correct issues during
-								earily intervention rather than after languge patters have solidified.</p>
+									<p>After a complete assessment of your child's reading, language, and spelling skills, treatment can begin.  Research has shown that reading instruction for children with </p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -90,7 +87,7 @@
 
 					<section id="Contact" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Request an Appointmnet or Ask a Question</h2>
+							<h2>Request an Appointment or Ask a Question</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
