--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<section>
 									<span class="icon major fa-wechat"></span>
 									<h3>Therapy</h3>
-									<p>After a complete assessment of your child's reading, language, and spelling skills, treatment can begin.  Research has shown that reading instruction for children with </p>
+									<p>After a complete assessment of your child's reading, language, spelling, and writing skills, treatment can begin.  Research has shown that reading instruction for children with dyslexia and other language based reading difficulties need structured, explicit, and individualized instruction. Treatment must also be intensive, which translates to at least two one-hour sessions per week with home practice.</p>
 								</section>
 							</div>
 							<ul class="actions">
